--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ProofOfConcept</string>
+    <string name="no_data_found">No data found</string>
 </resources>
