--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ProofOfConcept</string>
     <string name="no_data_found">No data found</string>
+    <string name="refresh">Refresh</string>
 </resources>
